--- a/app/src/main/res/layout/mr_event_body.xml
+++ b/app/src/main/res/layout/mr_event_body.xml
@@ -42,7 +42,7 @@
             android:id="@+id/btnEventTime"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="@string/timeFomat"
+            android:text="@string/time_format"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true" />
 
@@ -50,7 +50,7 @@
             android:id="@+id/txvEventDate"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="@string/dateFomat"
+            android:text="@string/date_format"
             android:layout_centerVertical="true"
             android:layout_centerInParent="true"
             android:layout_marginRight="10dp" />
