--- a/app/src/main/res/layout/mr_memo_body.xml
+++ b/app/src/main/res/layout/mr_memo_body.xml
@@ -43,7 +43,7 @@
             android:id="@+id/btnMemoTime"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="@string/timeFomat"
+            android:text="@string/time_format"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true" />
 
@@ -51,7 +51,7 @@
             android:id="@+id/btnMemoDate"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="@string/dateFomat"
+            android:text="@string/date_format"
             android:layout_centerVertical="true"
             android:layout_centerInParent="true"
             android:layout_marginRight="10dp" />
