--- a/app/src/main/res/layout/mr_updateevent.xml
+++ b/app/src/main/res/layout/mr_updateevent.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
             android:layout_weight="1"
-            android:text="@string/cancle"
+            android:text="@string/cancel"
             android:textSize="20sp"
             android:layout_marginTop="10dip" />
 
