--- a/app/src/main/res/layout/kb_setting.xml
+++ b/app/src/main/res/layout/kb_setting.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/viewfont"
-        android:text="@string/viewfont"
+        android:text="@string/view_font"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:gravity="center" />
@@ -25,7 +25,7 @@
             android:layout_alignParentRight="true" />
 
         <TextView
-            android:text="@string/selectfontsize"
+            android:text="@string/select_font_size"
             android:textSize="20sp"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
             android:layout_alignParentRight="true" />
 
         <TextView
-            android:text="@string/selectfontcolor"
+            android:text="@string/select_font_color"
             android:textSize="20sp"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
@@ -69,7 +69,7 @@
             android:layout_alignParentRight="true" />
 
         <TextView
-            android:text="@string/selectbackground"
+            android:text="@string/select_background"
             android:textSize="20sp"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
