--- a/app/src/main/res/layout/mr_optdialoglayoutbdg.xml
+++ b/app/src/main/res/layout/mr_optdialoglayoutbdg.xml
@@ -9,7 +9,7 @@
         android:id="@+id/checkBox1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/bgd_enbgd"
+        android:text="@string/bgd_enable_bg"
         android:textColor="#0000FF" />
 
     <TextView
@@ -34,7 +34,7 @@
         android:layout_width="fill_parent"
         android:id="@+id/button3"
         android:layout_height="60dp"
-        android:text="@string/bgd_spbp" />
+        android:text="@string/bgd_sp_bg_pic" />
 
 </RelativeLayout>
     
