调整菜单显示，字体大小

--- a/app/src/main/res/layout/kb_menu_reader.xml
+++ b/app/src/main/res/layout/kb_menu_reader.xml
@@ -9,25 +9,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/popup_bg"
         android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/ll_menu_reader_skip"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/detail_menu_item_height"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="@dimen/detail_menu_margin_left"
+            android:layout_marginRight="@dimen/detail_menu_margin_right"
             android:layout_marginTop="@dimen/detail_menu_margin_top_up"
             android:background="@color/light_black">
 
             <TextView
-                android:layout_width="66dp"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="15dp"
-                android:textColor="@color/white" />
+                android:layout_gravity="center_vertical" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -49,20 +46,18 @@
 
         <LinearLayout
             android:id="@+id/ll_menu_reader_brightness"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/detail_menu_item_height"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="@dimen/detail_menu_margin_left"
+            android:layout_marginRight="@dimen/detail_menu_margin_right"
             android:layout_marginTop="@dimen/detail_menu_margin_top_up"
             android:background="@color/light_black">
 
             <TextView
-                android:layout_width="66dp"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="15dp"
-                android:textColor="@color/white" />
+                android:layout_gravity="center_vertical" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -84,20 +79,18 @@
 
         <LinearLayout
             android:id="@+id/ll_menu_reader_night_mode"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/detail_menu_item_height"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="@dimen/detail_menu_margin_left"
+            android:layout_marginRight="@dimen/detail_menu_margin_right"
             android:layout_marginTop="@dimen/detail_menu_margin_top_up"
             android:background="@color/light_black">
 
             <TextView
-                android:layout_width="66dp"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="15dp"
-                android:textColor="@color/white" />
+                android:layout_gravity="center_vertical" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -119,20 +112,18 @@
 
         <LinearLayout
             android:id="@+id/ll_menu_reader_save_bookmark"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/detail_menu_item_height"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="@dimen/detail_menu_margin_left"
+            android:layout_marginRight="@dimen/detail_menu_margin_right"
             android:layout_marginTop="@dimen/detail_menu_margin_top_up"
             android:background="@color/light_black">
 
             <TextView
-                android:layout_width="66dp"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="15dp"
-                android:textColor="@color/white" />
+                android:layout_gravity="center_vertical" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -154,20 +145,18 @@
 
         <LinearLayout
             android:id="@+id/ll_menu_reader_view_bookmark"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/detail_menu_item_height"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="@dimen/detail_menu_margin_left"
+            android:layout_marginRight="@dimen/detail_menu_margin_right"
             android:layout_marginTop="@dimen/detail_menu_margin_top_up"
             android:background="@color/light_black">
 
             <TextView
-                android:layout_width="66dp"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="15dp"
-                android:textColor="@color/white" />
+                android:layout_gravity="center_vertical" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -180,7 +169,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="@dimen/activity_vertical_margin"
                 android:layout_weight="1"
                 android:text="@string/view_bookmark"
                 android:textColor="@color/white" />
@@ -189,20 +178,18 @@
 
         <LinearLayout
             android:id="@+id/ll_menu_reader_setting"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/detail_menu_item_height"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="@dimen/detail_menu_margin_left"
+            android:layout_marginRight="@dimen/detail_menu_margin_right"
             android:layout_marginTop="@dimen/detail_menu_margin_top_up"
             android:background="@color/light_black">
 
             <TextView
-                android:layout_width="66dp"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="15dp"
-                android:textColor="@color/white" />
+                android:layout_gravity="center_vertical" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -224,20 +211,18 @@
 
         <LinearLayout
             android:id="@+id/ll_menu_reader_backward"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/detail_menu_item_height"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="@dimen/detail_menu_margin_left"
+            android:layout_marginRight="@dimen/detail_menu_margin_right"
             android:layout_marginTop="@dimen/detail_menu_margin_top_up"
             android:background="@color/light_black">
 
             <TextView
-                android:layout_width="66dp"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="15dp"
-                android:textColor="@color/white" />
+                android:layout_gravity="center_vertical" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -259,16 +244,17 @@
 
         <Button
             android:id="@+id/bt_cancel"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/detail_menu_item_height"
-            android:layout_gravity="center"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="@dimen/detail_menu_margin_top"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="@dimen/detail_menu_margin_left"
+            android:layout_marginRight="@dimen/detail_menu_margin_right"
             android:layout_marginTop="@dimen/detail_menu_margin_top"
             android:background="@color/dark_white"
             android:text="@string/cancel"
             android:textColor="@color/white" />
+
     </LinearLayout>
 
 </RelativeLayout>
