修复字体显示问题

--- a/app/src/main/res/layout/kb_string_reader.xml
+++ b/app/src/main/res/layout/kb_string_reader.xml
@@ -12,22 +12,22 @@
         android:layout_weight="1.0"
         android:orientation="vertical">
 
-        <ScrollView
-            android:id="@+id/scvContent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="none">
+        <!--<ScrollView-->
+            <!--android:id="@+id/scvContent"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:scrollbars="none">-->
 
             <TextView
                 android:id="@+id/textContent"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="15dp"
-                android:layout_marginLeft="9dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="6dp"
                 android:layout_marginRight="6dp"
                 android:layout_marginTop="15dp" />
 
-        </ScrollView>
+        <!--</ScrollView>-->
 
     </LinearLayout>
 
