文本阅读界面调整

--- a/app/src/main/res/layout/kb_string_reader.xml
+++ b/app/src/main/res/layout/kb_string_reader.xml
@@ -5,31 +5,33 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/llayScroll"
+    <!--<LinearLayout-->
+    <!--android:id="@+id/llayScroll"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_weight="1.0"-->
+    <!--android:orientation="vertical">-->
+
+    <!--<ScrollView-->
+    <!--android:id="@+id/scvContent"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:scrollbars="none">-->
+
+    <TextView
+        android:id="@+id/textContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="15dp"
         android:layout_weight="1.0"
-        android:orientation="vertical">
+        android:gravity="top" />
 
-        <!--<ScrollView-->
-            <!--android:id="@+id/scvContent"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:scrollbars="none">-->
+    <!--</ScrollView>-->
 
-            <TextView
-                android:id="@+id/textContent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="6dp"
-                android:layout_marginRight="6dp"
-                android:layout_marginTop="15dp" />
-
-        <!--</ScrollView>-->
-
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
     <LinearLayout
         android:id="@+id/llayFooter"
