--- a/app/src/main/res/menu/menu_main_menu_home.xml
+++ b/app/src/main/res/menu/menu_main_menu_home.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/weibo"
-        android:icon="@drawable/icon_weibo"
+        android:icon="@drawable/icon_weibo_w"
         android:orderInCategory="90"
         android:title="weibo"
         app:showAsAction="ifRoom" />
