--- a/app/src/main/res/layout/kb_main.xml
+++ b/app/src/main/res/layout/kb_main.xml
@@ -12,6 +12,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:text="hello"
+        android:textColor="@color/white"
         android:textSize="20sp" />
 
     <TextView
@@ -21,6 +22,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:text="@string/exit"
+        android:textColor="@color/white"
         android:textSize="20sp" />
 
     <ImageView
