--- a/app/src/main/res/layout/act_training_diary.xml
+++ b/app/src/main/res/layout/act_training_diary.xml
@@ -18,8 +18,8 @@
             android:id="@+id/swipe_refresh_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="15px"
-            android:paddingTop="15px">
+            android:paddingLeft="5dp"
+            android:paddingTop="5dp">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_view"
