--- a/app/src/main/res/layout/item_training_diary.xml
+++ b/app/src/main/res/layout/item_training_diary.xml
@@ -8,13 +8,13 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:background="#ffffff">
 
         <LinearLayout
             android:id="@+id/item_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
