--- a/app/src/main/res/layout/kb_string_reader.xml
+++ b/app/src/main/res/layout/kb_string_reader.xml
@@ -47,36 +47,39 @@
             android:max="1000"
             android:progressDrawable="@drawable/progressbar_normal" />
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/txvFileName"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
+                android:layout_weight="1"
+                android:gravity="left"
                 android:textColor="#FF000000"
                 android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/mTxvBatteryStatus"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                android:gravity="center"
                 android:textColor="#FF000000"
                 android:textSize="10sp" />
 
             <DigitalClock
                 android:id="@+id/dcTime"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
+                android:layout_weight="1"
+                android:gravity="right"
                 android:textColor="#FF000000"
                 android:textSize="10sp" />
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
